--- a/A_dbms/templates/dbms/appraisal/endor-list.html
+++ b/A_dbms/templates/dbms/appraisal/endor-list.html
@@ -29,7 +29,7 @@
                 </tr>
                 <tr>
                     <td class="bb tc" width="12.5%">金额</td>
-                    <td class="bb tc" width="12.5%">{{ amount_str_w }}万</td>
+                    <td class="bb tc" width="12.5%">{{ amount_str_w }}万元</td>
                     <td class="bb tc" width="12.5%">期限</td>
                     <td class="bb tc" colspan="2">{{ credit_term_str }}个月</td>
                     <td class="bb tc" colspan="2">月利率（‰）</td>
