--- a/A_dbms/templates/dbms/provide/modl/agree-sign-add-mod.html
+++ b/A_dbms/templates/dbms/provide/modl/agree-sign-add-mod.html
@@ -1,12 +1,12 @@
-<div class="modal fade" id="signAllModal" tabindex="-1"
-     role="dialog" aria-labelledby="signAllModal">
+<div class="modal fade" id="addAgreeSignModal" tabindex="-1"
+     role="dialog" aria-labelledby="addAgreeSignModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="signAllModalLabel">签订所有合同
+                <h4 class="modal-title" id="addAgreeSignModalLabel">合同签订
                 <input style="display: none" name="agree_id" id="id_agree_id" value={{ agree_obj.id }}>
                 </h4>
             </div>
@@ -18,7 +18,7 @@
             <label id="formErrors"></label>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="signAllModalOk">签订</button>
+                <button type="button" class="btn btn-primary" id="addAgreeSignModalOk">签订</button>
             </div>
         </div>
     </div>
