--- a/A_dbms/templates/dbms/provide/provide-agree-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-agree-scan.html
@@ -10,6 +10,7 @@
         {% include 'dbms/provide/modl/notify-add-mod.html' %}
         {% include 'dbms/provide/modl/notify-del-mod.html' %}
         {% include 'dbms/provide/modl/ascertain-add-mod.html' %}
+        {% include 'dbms/provide/modl/agree-sign-add-mod.html' %}
         {% include 'dbms/provide/modl/counter-sign-add-mod.html' %}
     </div>
 {% endblock %}
@@ -20,4 +21,5 @@
     {% include 'dbms/provide/extra/js-notify-del.html' %}
     {% include 'dbms/provide/extra/js-ascertain-add.html' %}
     {% include 'dbms/provide/extra/js-counter-sign-add.html' %}
+    {% include 'dbms/provide/extra/js-agree-sign-add.html' %}
 {% endblock %}
