--- a/A_dbms/static/dbms/css/notify-style.css
+++ b/A_dbms/static/dbms/css/notify-style.css
@@ -13,7 +13,7 @@ body {
     /*右空白*/
     margin-right: auto;
     /*字体大小*/
-    font-size: 13pt;
+    font-size: 14pt;
     /*{#背景色*/
     /*background-color: #dddddd;*/
     /*字间距*/
@@ -29,9 +29,14 @@ body {
     page-break-after: always;
 }
 
-.indal {
-    /*缩进*/
-    text-indent: 20pt;
+.indent{
+     /*缩进*/
+    text-indent: 35pt;
+}
+
+.arg-bn {
+    /*行间距*/
+    line-height: 35pt;
     /*两端对齐文本*/
     text-align: justify;
     text-justify: distribute;
