--- a/A_dbms/templates/dbms/provide/notify_show/fdd.html
+++ b/A_dbms/templates/dbms/provide/notify_show/fdd.html
@@ -1,6 +1,6 @@
-<div style="font-size: 20pt">
-    <p align="center"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
-    <p style="padding-bottom: 25pt" align="center"><strong>个人住房抵押贷款项目贷款放款通知单</strong></p>
+<div class="tc">
+    <p class="tit"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
+    <p class="sub-head" style="padding-bottom: 25pt"><strong>个人住房抵押贷款项目贷款放款通知单</strong></p>
 </div>
 <div align="right">{{ date_today_str }}</div>
 <table>
