--- a/A_dbms/templates/dbms/appraisal/endor-list.html
+++ b/A_dbms/templates/dbms/appraisal/endor-list.html
@@ -8,9 +8,9 @@
 {% block body %}
     <div class="sign-tab">
         <div class="split">
-            <div style="font-size: 20pt">
-                <p align="center"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
-                <p align="center"><strong>个人住房抵押贷款审批表</strong></p>
+            <div class="tc">
+                <p class="tit"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
+                <p class="sub-head"><strong>个人住房抵押贷款审批表</strong></p>
             </div>
             <div align="right">单位：万元</div>
             <table>
@@ -39,7 +39,7 @@
                     <td class="bb tc" width="12.5%">担保方式</td>
                     <td class="bb tc indal" colspan="4">{{ ttt }}</td>
                     <td class="bb tc" width="12.5%">还款方式</td>
-                    <td class="bb tc" colspan="2">？？？？？？</td>
+                    <td class="bb tc" colspan="2">{{ article_obj.get_article_repay_method_display }}</td>
                 </tr>
                 <tr>
                     <td class="bbb" colspan="3">调查意见：</td>
