--- a/A_dbms/templates/dbms/article/modl/mod_form/opinion-add-edit.html
+++ b/A_dbms/templates/dbms/article/modl/mod_form/opinion-add-edit.html
@@ -1,9 +1,16 @@
 <div id="form_opinion">
     <div class="form-group"><!--风控建议-->
+        <label for="id_article_repay_method" class="col-sm-3 control-label">{{ form_opinion.article_repay_method.label }}：</label>
+        <div class="col-sm-9">{{ form_opinion.article_repay_method }}</div>
+        <label id="e_article_repay_method" class="pull-right">{{ form_opinion.article_repay_method.errors }}</label>
+    </div>
+    <div class="form-group"><!--风控建议-->
         <label for="id_opinion" class="col-sm-3 control-label">{{ form_opinion.opinion.label }}：</label>
         <div class="col-sm-9">{{ form_opinion.opinion }}</div>
         <label id="e_opinion" class="pull-right">{{ form_opinion.opinion.errors }}</label>
     </div>
+
+
 
 </div>
 
