--- a/A_dbms/templates/dbms/provide/notify_show/dbd.html
+++ b/A_dbms/templates/dbms/provide/notify_show/dbd.html
@@ -1,6 +1,6 @@
-<div style="font-size: 20pt">
-    <p align="center"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
-    <p style="padding-bottom: 25pt" align="center"><strong>放款通知审批单</strong></p>
+<div class="tc">
+    <p class="tit"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
+    <p class="sub-head" style="padding-bottom: 25pt"><strong>放款通知审批单</strong></p>
 </div>
 <div>会计财务部：</div>
 <p class="indal">根据我公司与<u>{{ notify_obj.agree.lending.summary.custom.name }}{% if notify_obj.agree.lending.summary.borrower.all %}{% for borrower in notify_obj.agree.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}
