--- a/A_dbms/templates/dbms/provide/notify_show/gqd.html
+++ b/A_dbms/templates/dbms/provide/notify_show/gqd.html
@@ -1,6 +1,6 @@
-<div style="font-size: 20pt">
-    <p align="center"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
-    <p style="padding-bottom: 25pt" align="center"><strong>放款通知审批单</strong></p>
+<div class="tc">
+    <p class="tit"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
+    <p class="sub-head" style="padding-bottom: 25pt"><strong>放款通知审批单</strong></p>
 </div>
 <div>会计财务部：</div>
 <p class="indent arg-bn">根据我公司与<u>{{ notify_obj.agree.lending.summary.custom.name }}{% if notify_obj.agree.lending.summary.borrower.all %}{% for borrower in notify_obj.agree.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u>于<u>{{ notify_obj.agree.sign_date }}</u>签订的编号为<u>{{ notify_obj.agree.agree_num }}</u>《<u>{{ notify_obj.agree.get_agree_name_display }}</u>》约定，已完成放款前的全部手续，同意发放贷款（大写）<u>{{ agree_amount_cn }}</u>，期限<u>{{ agree_term_cn }}</u>个月<u>零</u>天，月利率<u>{{ agree_rate_str }}</u>‰。</p>
