--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-add-edit.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-add-edit.html
@@ -5,6 +5,11 @@
         <div class="col-sm-9">{{ from_counter.counter_typ }}</div>
         <label id="e_counter_typ" class="pull-right">{{ from_counter.counter_typ.errors }}</label>
     </div>
+    <div class="form-group"><!--其他约定事项-->
+        <label for="id_counter_other" class="col-sm-3 control-label">{{ from_counter.counter_other.label }}：</label>
+        <div class="col-sm-9">{{ from_counter.counter_other }}</div>
+        <label id="e_counter_other" class="pull-right">{{ from_counter.counter_other.errors }}</label>
+    </div>
 
 </div>
 
